Subindo atualização da branch

--- a/cadastro-produtor-rural/src/app/components/producer/producer.component.html
+++ b/cadastro-produtor-rural/src/app/components/producer/producer.component.html
@@ -12,7 +12,7 @@
           <p class="item-list"><strong>Área total da Fazenda:</strong> {{ register.farmArea }}</p>
           <p class="item-list"><strong>Área agricultavel:</strong> {{ register.arableArea }}</p>
           <p class="item-list"><strong>Área de vegetação: </strong>{{ register.vegetationArea }}</p>
-          <p class="item-list"><strong>Culturas Platadas:</strong> {{ plantedCropsValue }}</p>
+          <p class="item-list"><strong>Culturas Platadas:</strong> {{ register.plantedCrops }}</p>
         </div>
         <div class="buttons">
           <button class="button-edit" >
